--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "bootstrap": "^5.3.1",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuetify": "^3.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
