--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "enjoytrip",
+  "name": "frontend",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -8,17 +8,20 @@
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
+
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "axios": "^1.6.1",
-    "bootstrap": "^5.3.1",
-    "pinia": "^2.1.7",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "pinia": "^2.1.7"
   },
+
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "sass": "1.69.5",
     "vite": "^4.4.11"
   }
 }
