selectall in post 수정중..

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
       matching-strategy: ANT_PATH_MATCHER
 
 mybatis:
-  type-aliases-package: com.ssafy.*.model.dto
+  type-aliases-package: com.ssafy.*.dto
   mapper-locations: mapper/*.xml
 
 logging:
