--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,20 +8,20 @@
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
-
   "dependencies": {
-    "bootstrap": "^5.3.2",
     "axios": "^1.6.1",
+    "bootstrap": "^5.3.2",
+    "bootstrap-vue-next": "^0.14.10",
+    "pinia": "^2.1.7",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5",
-    "pinia": "^2.1.7"
+    "vue-router": "^4.2.5"
   },
-
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "sass": "1.69.5",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.11"
   }
 }
