--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "sass": "1.69.5",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.11"
   }
 }
