--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,21 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@quasar/extras": "^1.16.8",
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
     "bootstrap-vue-next": "^0.14.10",
     "pinia": "^2.1.7",
+    "quasar": "^2.14.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.6.0",
     "@vitejs/plugin-vue": "^4.4.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
-    "sass": "1.69.5",
+    "sass": "^1.33.0",
     "vite": "^4.4.11"
   }
 }
